--- a/web/bootstrap/stylesheets/custom.css
+++ b/web/bootstrap/stylesheets/custom.css
@@ -1,6 +1,37 @@
+html
+{
+    position   : relative;
+    min-height : 100%;
+}
+
 body
 {
-    padding-top : 50px;
+    font-family      : "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size        : 14px;
+    line-height      : 1.42857;
+    color            : #333;
+    background-color : #fff;
+    padding-top      : 50px;
+    margin-bottom    : 60px;
+}
+
+footer
+{
+    position         : absolute;
+    bottom           : 0;
+    width            : 100%;
+    height           : 60px;
+    background-color : #f5f5f5;
+}
+
+footer a:hover
+{
+    text-decoration : none;
+}
+
+footer .text-muted
+{
+    margin : 20px 0;
 }
 
 /* Aliases */
@@ -49,6 +80,7 @@ body
 .fa-warning:before,
 .fa-failed:before
 {
-    content: "\f071";
+    content : "\f071";
 }
+
 /* END Aliases */
